# ROS2_Client_Libraries_Not

./: Ros2_not
install/: local_setup.sh  setup.sh
install/aliriza/share/aliriza/: package.sh  package.xml
install/python_parametre/lib/python_parametre/: minimal_param_node  param_node
install/python_parametre/share/python_parametre/: launch.py  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/ser_cli/lib/ser_cli/: client  service
install/ser_cli/share/ser_cli/: package.sh
install/tut_interface/include/tut_interface/msg/: num.h  num.hpp  rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h  sphere.h  sphere.hpp
install/tut_interface/include/tut_interface/srv/: add_three_ints.h  add_three_ints.hpp
install/tut_interface/share/tut_interface/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/tut_interface/share/tut_interface/cmake/: ament_cmake_export_targets-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake  tut_interface__rosidl_generator_cExport-noconfig.cmake  (+6 more)
log/: latest_build
src/aliriza/aliriza/: publisher.py  subscriber.py
src/my_package/: CMakeLists.txt  package.xml
src/my_package/scripts/: pub.py  sub.py
src/python_parametre/: package.xml  setup.cfg  setup.py
src/python_parametre/python_parametre/: parametre_dügüm.py
src/ser_cli/: package.xml  setup.cfg  setup.py
src/ser_cli/ser_cli/: client.py  service.py
src/tut_interface/: CMakeLists.txt
(+23 files in other folders)
