<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_package</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="alirizalacin@gmail.com">user</maintainer>
  <license>TODO: License declaration</license>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <member_of_group>rosidl_interface_packages</member_of_group> <!-- interface paketlerini gruplamak ve belirtmek için kullanılır. -->
  

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rosidl_interface_packages>my_package</rosidl_interface_packages> <!-- bu paketin içinde tanımlanan ROS 2 arayüz paketinin adını (my_package) belirtir. -->
  </export>
  <build_export_depend>rosidl_default_runtime</build_export_depend> <!-- Bu paketin derleme sırasında rosidl_default_runtime paketine bağımlı olduğunu belirtir. -->
  
</package>
